Update: fixed right aligned text on index page while working on gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,14 @@ main {
 	color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px){
+    #photos{
+		column-count: 2;
+        column-gap: 0;
+	}
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px){
 	nav {
@@ -289,12 +297,15 @@ main {
     #benefits-mental{
         order: 1;
     }
-    
-    #benefits-mental > div{
+
+    #benefits-physical > div{
         align-self: flex-start;
     }
     
-    #benefits-physical > div{
+    #benefits-mental > div{
+        text-align: end;
         align-self: flex-end;
     }
+    
+    
 }
